--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html {
-    color: white;
-    background-color: #333333;
+    color: #f0f0f0;
+    background-color: #303030;
     font-family: sans-serif;
 }
 
@@ -18,4 +18,8 @@ p {
 
 ul {
     font-size: 1.15em;
+}
+
+li {
+    margin-bottom: 5px;
 }
