--- a/style.css
+++ b/style.css
@@ -13,11 +13,11 @@ a:visited {
 }
 
 p {
-    font-size: 1.25em;
+    font-size: 1.25rem;
 }
 
 ul,ol {
-    font-size: 1.25em;
+    font-size: 1.25rem;
 }
 
 li {
